# video-auto-dubbing

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .env.prod.example  .gitignore  .golangci.yml  .markdownlint.json  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEVELOPMENT_PROGRESS.md  DOCKER_FIXES.md  IMPLEMENTATION_GUIDE.md  LOCAL_VS_DOCKER.md  MIGRATION_TO_ALIYUN.md  Makefile  README.md  SUBTITLE_DEFAULT_CHANGE.md  SUMMARY.md  WORKER_MODIFICATION_GUIDE.md  analysis_tts_voice_cloning.md  api_server_v2.py  api_server_v2_complete.py  apply-subtitle-default.sh  check-config.sh  docker-compose.prod.v2.yml  docker-compose.prod.yml  docker-compose.yml  docker-test.sh  env.example  final_server_fix.py  go.mod  model_loading_examples.py  quick_parameter_fix.py  standard_indextts_fix.py  test_code.md  test_tts_server.sh  tts_calling_examples.py  (+3 more)
.github/workflows/: ci.yml  format-check.yml
.mc/: config.json
api/: Dockerfile  go.mod  go.sum  main.go
api/internal/config/: config.go
api/internal/database/: migrations.go
api/internal/handlers/: settings.go  task.go
api/internal/minio/: minio.go
api/internal/models/: settings.go  task.go
api/internal/orchestrator/: interfaces.go  repository.go  task_orchestrator.go
api/internal/queue/: connection.go  publisher.go
api/internal/router/: router.go
api/internal/service/: settings.go  task.go
api/internal/storage/: storage.go
asr_service/: Dockerfile  pyproject.toml
asr_service/app/: config.py  main.py  models.py  transcriber.py
backend/: DEPLOYMENT.md  Dockerfile  TTS_MODELS_README.md  alembic.ini  dev.sh  run_worker.sh
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py  monitoring.py  tasks.py
backend/app/models/: __init__.py  segment.py  task.py
backend/app/schemas/: __init__.py  segment.py  task.py
backend/app/services/: __init__.py  storage_service.py  task_service.py
backend/app/utils/: __init__.py  ffmpeg.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/examples/: tts_usage_examples.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  003_add_subtitle_fields.py  005_change_subtitle_mode_default.py
docs/: PHASE2_COMPLETE.md  README.md  REFACTORING_PROGRESS.md  aliyun_tts_integration.md  api-contracts.md  architecture-diagram.md  architecture.md  asr-service.md  code-review.md  coding-standards.md  commit-message.md  deployment-guide.md  deployment.md  pipeline-spec.md  queue-messages.md  quick-start.md  startup-guide.md  tts-service.md  tts_official_solution.md  tts_voice_cloning_solution.md
docs/guides/: DASHSCOPE_LLM_SETUP.md  GLM_FREE_MODEL_GUIDE.md
docs/migration/: ALIYUN_MIGRATION_PLAN.md  ASR_API_RESEARCH.md  CHEATSHEET.md  GET_STARTED.md  MIGRATION_CHECKLIST.md  QUICK_START_GUIDE.md  README.md  SUMMARY.md  TTS_QWEN3_DEPLOYMENT.md  UPDATED_MIGRATION_OVERVIEW.md  WORKFLOW.md
docs/refactoring/: 设置功能设计方案.md
frontend/: package-lock.json  package.json
frontend/components/: upload-form.tsx
frontend/lib/: api.ts  types.ts
gateway/: nginx.conf
scripts/: bootstrap.sh  e2e_test.sh  prepare_test_video.sh  setup_migration_worktrees.sh
shared/: go.mod  go.sum
shared/config/: config.go
shared/minio/: minio.go
shared/queue/: queue.go
shared/storage/: storage.go
tts_service/: .gitignore  Dockerfile  README.md  pyproject.toml
tts_service/app/: __init__.py  config.py  exceptions.py  main.py  models.py  synthesizer.py
tts_service/indextts/: infer_v2.py
web/: index.html
worker/: Dockerfile  go.mod  go.sum  main.go
worker/cmd/tts_requeue/: main.go
worker/internal/asr/: aliyun_client.go  client.go  volcengine_client.go
worker/internal/config/: config.go  manager.go
worker/internal/database/: database.go
worker/internal/minio/: minio.go
worker/internal/models/: message.go
worker/internal/queue/: connection.go
worker/internal/settings/: loader.go
worker/internal/storage/: storage.go
worker/internal/translate/: client.go  dashscope_client.go  factory.go  interface.go  limiter.go
worker/internal/tts/: client.go  vllm_client.go.backup
worker/internal/worker/: processors.go  steps.go  worker.go  (+1 more)
(+11 files in other folders)
