[project]
name = "tts-service-lean"
version = "0.2.0"
description = "Lean TTS service for remote deployment (using index-tts-vllm)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    # External IndexTTS implementation
    "torch>=2.0.0",
    "transformers>=4.35.0",
    # Use external index-tts-vllm when available
    # "index-tts-vllm @ git+https://github.com/Ksuriuri/index-tts-vllm.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long (handled by black)
line-length = 120
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true